DOCET-61 Fix findbugs warnings and enable on CI jobs